# zed

./: Cargo.toml
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: message_editor.rs
crates/agent_ui/src/conversation_view/: thread_view.rs
crates/agent_voice_detector/: Cargo.toml  README.md
crates/agent_voice_detector/src/: agent_voice_detector.rs  audio_capture.rs  cpal_util.rs  speech_to_text_server.rs  transcriber.rs  websocket_transcriber.rs
